--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "devs": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,37 +14,30 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
+    "@mui/system": "^6.0.2",
+    "@mui/x-date-pickers": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/cheerio": "^0.22.35",
-    "apexcharts": "^3.53.0",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "cookie": "^0.6.0",
-    "js-cookie": "^3.0.5",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-apexcharts": "^1.4.1",
-    "react-dom": "^18",
+    "dayjs": "^1.11.13",
+    "mongoose": "^8.6.1",
+    "next": "^14.2.8",
+    "next-pwa": "^5.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-swipeable": "^7.0.1",
-    "recharts": "^2.12.7",
-    "redis": "^4.7.0",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "tesseract.js": "^5.1.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/lowdb": "^1.0.15",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "lowdb": "^7.0.1",
-    "postcss": "^8",
+    "eslint-config-next": "^14.2.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
