--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,22 @@
 {
-    "name": "TYA-SRMAP",
-    "short_name": "TYA-SRMAP",
-    "description": "A Place to track your Attendance",
-    "icons": [
-      {
-        "src": "/icon-192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/icon-512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "start_url": "/",
-    "background_color": "#ffffff",
-    "display": "standalone",
-    "theme_color": "#ffffff",
-    "screenshots": [
+  "name": "TYA-SRMAP",
+  "short_name": "TYA-SRMAP",
+  "description": "A Place to track your Attendance",
+  "icons": [
+    {
+      "src": "/icon-dark-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any",
+      "theme_color": "#ffffff",
+      "background_color": "#ffffff"
+    }
+  ],
+  "start_url": "/",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "display": "standalone",
+  "screenshots": [
     {
       "src": "/screenshot-1170x2532.png",
       "type": "image/png",
@@ -32,5 +30,4 @@
       "form_factor": "wide"
     }
   ]
-  }
-  
+}
