--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/cheerio": "^0.22.35",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "cookie": "^0.6.0",
@@ -25,6 +26,7 @@
     "mongoose": "^8.6.1",
     "next": "^14.2.8",
     "next-pwa": "^5.6.0",
+    "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -38,7 +40,7 @@
     "@types/react": "^18.3.5",
     "eslint": "^8",
     "eslint-config-next": "^14.2.8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
