Added Terms of Service & Privacy Policy

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "TYA-SRMAP",
-  "short_name": "TYA-SRMAP",
+  "name": "TYA",
+  "short_name": "TYA",
   "description": "A Place to track your Attendance",
   "icons": [
     {
