--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@mui/x-date-pickers": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/cheerio": "^0.22.35",
+    "@upstash/redis": "^1.34.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "better-react-mathjax": "^2.0.3",
+    "bull": "^4.16.3",
+    "bullmq": "^5.13.0",
     "cheerio": "^1.0.0",
     "cookie": "^0.6.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "mongoose": "^8.6.1",
     "next": "^14.2.8",
     "next-pwa": "^5.6.0",
@@ -32,6 +38,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-swipeable": "^7.0.1",
+    "redis": "^4.7.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
