--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.0.1",
     "@mui/system": "^6.0.2",
     "@mui/x-date-pickers": "^7.16.0",
+    "@next/third-parties": "^14.2.11",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/cheerio": "^0.22.35",
     "@upstash/redis": "^1.34.0",
@@ -36,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-icons": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-swipeable": "^7.0.1",
     "redis": "^4.7.0",
