--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie": "^0.6.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.17.0",
     "ioredis": "^5.4.1",
     "mongoose": "^8.6.1",
     "next": "^14.2.8",
